--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.16",
-        "@heroicons/vue": "^2.0.18"
+        "@heroicons/vue": "^2.0.18",
+        "notivue": "^1.4.4"
     }
 }
